# SAAS

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LANGRAPH ai light plan.md  Makefile  PLAN.md  README.md  SECURITY.md  conftest.py  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  flutter_instructions.md  gunicorn.conf.py  pyproject.toml  the-final-fixation.md
.claude/: settings.json
.claude/agents/: add-analytics-endpoint.md  add-chart.md  add-dbt-model.md  add-docker-service.md  add-migration.md  add-page.md  coverage-check.md
.claude/commands/: zambahola.md
.claude/hooks/: brain-session-end.sh  pre-commit-checks.sh
.claude/rules/: datapulse-graph.md  use-graph-mcp.md  use-second-brain.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  cleanup-droplet.yml  dependabot-auto-merge.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  diagnose.yml  lighthouse-ci.yml  pos-desktop-release.yml  pos-release.yml  security.yml
_archived/android/: .gitignore  README.md  gradlew
_archived/mobile/: .env.example  package-lock.json
_archived/powerbi/: DASHBOARD-BUILD-GUIDE.md  dashboard-dax-additions.md  guide.html  midnight-pharma.json  saas_demo.pbip
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
audit/: 00_PROJECT_AUDIT_2026-04-21.md  CALCULATION_AUDIT.md
config/: pos_slos.yaml
contracts/: README.md  openapi.json
dbt/: dbt_project.yml  package-lock.yml  packages.yml
dbt/macros/: governorate_map.sql  test_unique_combination_of_columns.sql
dbt/seeds/: seed_budget_2025.csv  (+1 more)
docker/: Dockerfile.playwright  docker-compose.playwright.yml
docs/: ARCHITECTURE.md  CALCULATION_LOGIC_AUDIT.md  CLAUDE_CODEX_COLLABORATION.md  CLAUDE_REFERENCE.md  EXPLORATION_REPORT_PHASE2.2.md  Enhancement 3 - Analytics Dashboard Upgrades.md  GLOBAL_LESSONS.md  HANDOFF_REMAINING_TASKS.md  IMPLEMENTATION_PLAN.md  PLATFORM_MATRIX.md  README.md  RUNBOOK.md  SECURITY_SCAN_NOTES.md  The Great Fix.md  disaster-recovery.md
docs/adr/: README.md  (+7 more)
flutter_app/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
frontend/: .env.example  .eslintignore  .gitignore  .lighthouserc.json  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  playwright.real-backend.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
keycloak/: realm-export.json
migrations/: .known-duplicate-prefixes  001_create_bronze_schema.sql  002_add_rls_and_roles.sql  003_add_tenant_id.sql  004_create_n8n_schema.sql  005_create_pipeline_runs.sql  006_placeholder.sql  008_create_audit_log.sql  009_create_performance_indexes.sql  010_create_forecast_results.sql  011_create_targets.sql  012_create_subscriptions.sql  013_create_anomaly_alerts.sql  014_add_audit_log_tenant_user.sql  015_fix_anomaly_alerts_owner_policy.sql  016_add_composite_indexes_fct_sales.sql  017_create_onboarding.sql  018_add_search_indexes.sql  019_create_saved_views.sql  020_create_notifications.sql  021_create_dashboard_layouts.sql  022_create_annotations.sql  023_add_expression_indexes.sql  024_create_rbac_tables.sql  025_create_report_schedules.sql  026_create_gamification.sql  027_create_branding.sql  028_create_resellers.sql  029_seed_initial_members.sql  030_bronze_sales_unique_index.sql  030a_bronze_sales_unique_index.sql  030b_fix_owner_user_id.sql  030c_fix_rls_and_tenant_fks.sql  031_gamification_tenant_fks.sql  031_pipeline_last_completed_stage.sql  032_autovacuum_tuning.sql  032_enable_pg_stat_statements.sql  033_add_tenant_composite_indexes.sql  035_rls_audit.sql  036_add_reseller_rls.sql  (+87 more)
mobile/: App.tsx  README.md  app.json  package.json
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
n8n/: init.sh  set_error_handler.py  setup_n8n.py
nginx/: default.conf  security-headers.inc
pos-desktop/: .gitignore  M2_PREWORK.md  electron-builder.yml  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
postgres/: postgresql.conf
scripts/: .known-api-layer-violations  .known-session-violations  apply_migrations_path_b.py  auth0-post-login-action.js  backup.sh  check_api_layer_imports.py  check_coverage_gates.py  check_diff_coverage.sh  check_docs_truth_sources.py  check_migration_numbers.py  check_migration_safety.py  check_session_safety.py  check_session_scope_usage.py  clerk_create_sign_in_link.py  clerk_set_password.py  clerk_setup.py  clerk_verify_email.py  deploy-manual.sh  dump_openapi.py  entrypoint.sh  nextjs-to-react-router.py  pos-import-codemod-reverse.py  pos-import-codemod.py  pos-shared-codemod.py  prestart.sh  restore.sh  setup-ssh.md  smoke-test.sh  split_pos_repository.py  start.sh  update-readme.sh  upload_drug_catalog.py
tests/: conftest.py  test_adjustments_loader.py  test_advanced_repository.py  test_ai_light.py  test_ai_light_client.py  test_ai_light_endpoints.py  test_ai_light_graph_contract.py  test_ai_light_graph_hitl.py  test_ai_light_graph_integration.py  test_ai_light_graph_nodes.py  test_ai_light_graph_state.py  test_ai_light_graph_tools.py  test_ai_light_service.py  test_ai_light_service_extra.py  test_analytics_channels.py  test_analytics_endpoints.py  test_analytics_endpoints_extra.py  test_analytics_endpoints_more.py  test_analytics_models.py  test_analytics_repo_extra.py  test_analytics_repository.py  test_analytics_service.py  test_analytics_service_extra.py  test_annotations.py  test_annotations_endpoints.py  test_anomaly.py  test_anomaly_calendar.py  test_anomaly_cards.py  test_anomaly_detector.py  test_api_endpoints.py  test_api_quality_audit.py  test_arq_coverage_gaps.py  test_arq_queue.py  test_arq_smoke.py  test_arq_worker.py  test_async_db.py  test_async_db_integration.py  test_async_executor_core.py  test_audit_log_immutability.py  test_audit_service.py  (+260 more)
traefik/: traefik.yml
(+2066 files in other folders)
