[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datapulse"
version = "0.1.0"
description = "Business/Sales Analytics Pipeline — Import, Clean, Analyze, Dashboard"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0,<2",
    "pyarrow>=15.0,<19",
    "openpyxl>=3.1,<4",
    "xlrd>=2.0,<3",
    "fastexcel>=0.7,<2",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "sqlalchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "structlog>=24.1,<26",
    "dbt-core>=1.8,<2",
    "dbt-postgres>=1.8,<2",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.4,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["datapulse"]

[tool.coverage.report]
fail_under = 80
show_missing = true
