[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datapulse"
version = "0.1.0"
description = "Business/Sales Analytics Pipeline — Import, Clean, Analyze, Dashboard"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0,<2",
    "pyarrow>=15.0,<19",
    "fastexcel>=0.7,<2",
    "pydantic[email]>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "sqlalchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "asyncpg>=0.29,<1",
    "structlog>=24.1,<26",
    "dbt-core>=1.8,<2",
    "dbt-postgres>=1.8,<2",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "gunicorn>=22.0,<24",
    "httpx>=0.27,<1",
    "watchdog>=4.0,<5",
    "slowapi>=0.1.9,<1",
    "cffi>=1.15",
    "PyJWT[crypto]>=2.8,<3",
    "redis>=5.0,<6",
    "apscheduler>=3.10,<4",
    "sqlparse>=0.5,<1",
    "pyyaml>=6.0,<7",
    "sentry-sdk[fastapi]>=2.0,<3",
    "statsmodels>=0.14,<1",
    "numpy>=1.24,<3",
    "stripe>=8.0,<16",
    "openpyxl>=3.0,<4",
    "reportlab>=4.0,<5",
    "python-multipart>=0.0.7,<1",
    "prometheus-fastapi-instrumentator>=6.0,<8",
    "arq>=0.26,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-cov>=5.0,<6",
    "pytest-asyncio>=0.23,<2",
    "aiosqlite>=0.19,<1",
    "ruff>=0.4,<1",
    "langchain-core>=0.3,<1",
    # diff-cover: local patch-coverage check (mirrors codecov/patch target).
    # See scripts/check_diff_coverage.sh + `make diff-cover`.
    "diff-cover>=9.0,<11",
    "fakeredis[lua]>=2.21,<3",
]
graph = [
    "mcp>=1.0,<2",
]
ai = [
    "langgraph>=0.2,<1",
    "langchain-openai>=0.2,<1",
    "langgraph-checkpoint-postgres>=2,<3",
]
tracing = [
    # OpenTelemetry distributed tracing — #607 Operational Maturity bundle.
    # Kept as an optional extra so environments that don't export traces
    # (local dev, CI) don't pay the ~8 MB install cost or the few-millisecond
    # startup overhead. Install with `pip install datapulse[tracing]`.
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<1",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0,<1",
    "opentelemetry-instrumentation-redis>=0.46b0,<1",
    "opentelemetry-instrumentation-httpx>=0.46b0,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/datapulse/pos/_repo_catalog.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Fast tests with no external dependencies (DB, Redis, network)",
    "integration: Tests requiring database or Redis",
    "e2e: End-to-end tests requiring full stack",
    "chaos: Fault injection / resilience tests",
]

[tool.coverage.run]
source = ["datapulse"]

[tool.coverage.report]
# Unit-test coverage floor. Kept 2 points below measured current (~79% on main)
# so normal variance doesn't break CI but a real regression does.
# Aligned with `.github/workflows/ci.yml` unit-test `--cov-fail-under` and
# `make coverage` (single source of truth — see issue #540).
fail_under = 77
show_missing = true

# ── Per-module coverage gates — issue #607 ────────────────────────────────────
# Enforced by scripts/check_coverage_gates.py in the CI unit-test job.
# Security-critical modules are gated higher than the 77 % overall floor.
# Raise these as coverage improves toward the 95 % target (issue #540).
[tool.datapulse.coverage_gates]
"datapulse/core/auth" = 90
"datapulse/core/jwt"  = 90
"datapulse/rbac"      = 90
"datapulse/billing"   = 85
"datapulse/pos"       = 80

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
strict_optional = true

# Third-party packages without stubs — suppress missing-stubs errors per module
[[tool.mypy.overrides]]
module = [
    "polars.*",
    "pyarrow.*",
    "fastexcel.*",
    "structlog.*",
    "psycopg2.*",
    "redis.*",
    "slowapi.*",
    "fastapi_cache.*",
    "dbt.*",
    "celery.*",
    "sentry_sdk.*",
    "opentelemetry.*",
    "httpx.*",
    "passlib.*",
    "jose.*",
    "stripe.*",
    "reportlab.*",
    "statsmodels.*",
    "apscheduler.*",
    "openpyxl.*",
    "prometheus_fastapi_instrumentator.*",
    "mcp.*",
    "google.*",
    "googleapiclient.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.bandit]
# B608: SQLAlchemy text() with f-strings is a known false positive — all values
# interpolated into text() are internal column/table identifiers whitelisted in
# service layer, never raw user input. Parameterized :bind variables handle user data.
skips = ["B608", "B108"]
